--- a/doc/Sequin cookbook.ipynb
+++ b/doc/Sequin cookbook.ipynb
@@ -16,6 +16,13 @@
     "\n",
     "Edit the `config.py` file to your preferences (e.g. default plot width, plot colors...).\n",
     "\n",
+    "To import `sequin` from the local folder where you cloned it, add this:\n",
+    "```\n",
+    "import sys\n",
+    "path_root = '<folder>' # where you store the source code\n",
+    "sys.path.append(str(path_root))\n",
+    "```\n",
+    "\n",
     "### Usage\n",
     "First, we create a `sequin.record` object. This object has two attributes:\n",
     "* The `sequence` dictionary will contain our DNA sequences (plasmids, PCR fragments, digestions...)\n",
